[gd_scene load_steps=11 format=3 uid="uid://co18g8203lcjm"]

[ext_resource type="Script" path="res://ui/player_select.gd" id="1_qb46y"]
[ext_resource type="Theme" uid="uid://c0bfo1n4w7tgt" path="res://ui/default_theme.tres" id="2_enwu2"]
[ext_resource type="Texture2D" uid="uid://belshgxot58hl" path="res://ui/nine_patch_atlas.tres" id="2_xqqw1"]
[ext_resource type="Texture2D" uid="uid://d1ty15luyqlsb" path="res://players/players.webp" id="3_d2y23"]
[ext_resource type="Texture2D" uid="uid://d1hbyhc7hnmuy" path="res://game_loop/main/misc.webp" id="3_hmsbx"]
[ext_resource type="Script" path="res://ui/input_hint.gd" id="5_if1do"]

[sub_resource type="Animation" id="Animation_mr5a8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/PlayerVisual/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0vlph"]
resource_name = "player_ready_wiggle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/PlayerVisual/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.384314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ty1w0"]
_data = {
"RESET": SubResource("Animation_mr5a8"),
"player_ready_wiggle": SubResource("Animation_0vlph")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_us0qv"]
atlas = ExtResource("3_d2y23")
region = Rect2(0, 0, 256, 256)

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_qb46y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ty1w0")
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xqqw1")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerVisual" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.737495)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PlayerVisual"]
layout_mode = 2
texture = SubResource("AtlasTexture_us0qv")
expand_mode = 5

[node name="PlayerID" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_enwu2")
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instruction" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
theme = ExtResource("2_enwu2")
theme_override_colors/font_color = Color(1, 0.443137, 1, 1)
text = "Press ENTER for keyboard player, or ANY button for gamepad."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InputHint" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("5_if1do")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/InputHint"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2

[node name="Node2D" type="Node2D" parent="MarginContainer/VBoxContainer/InputHint/Control"]
position = Vector2(64, 48.5)
scale = Vector2(0.25, 0.25)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/InputHint/Control/Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("3_hmsbx")
hframes = 8
frame = 6

[node name="LabelTop" type="Label" parent="MarginContainer/VBoxContainer/InputHint/Control/Node2D"]
offset_left = -72.0
offset_top = -150.0
offset_right = 75.0
offset_bottom = -2.0
rotation = -1.5708
pivot_offset = Vector2(73, 73)
theme = ExtResource("2_enwu2")
theme_override_font_sizes/font_size = 96
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelBottom" type="Label" parent="MarginContainer/VBoxContainer/InputHint/Control/Node2D"]
offset_left = -64.0
offset_top = 10.0
offset_right = 83.0
offset_bottom = 158.0
rotation = 1.5708
pivot_offset = Vector2(73, 73)
theme = ExtResource("2_enwu2")
theme_override_font_sizes/font_size = 96
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLeft" type="Label" parent="MarginContainer/VBoxContainer/InputHint/Control/Node2D"]
offset_left = -236.0
offset_top = 18.0
offset_right = -89.0
offset_bottom = 166.0
rotation = 3.14159
pivot_offset = Vector2(73, 73)
theme = ExtResource("2_enwu2")
theme_override_font_sizes/font_size = 96
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelRight" type="Label" parent="MarginContainer/VBoxContainer/InputHint/Control/Node2D"]
offset_left = 95.0
offset_top = 10.5
offset_right = 242.0
offset_bottom = 158.5
pivot_offset = Vector2(73, 73)
theme = ExtResource("2_enwu2")
theme_override_font_sizes/font_size = 96
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ready" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_enwu2")
theme_override_font_sizes/font_size = 32
text = "READY!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
